added player_data function

--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -2,21 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "import mlb\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from types import SimpleNamespace as ns"
+    "from types import SimpleNamespace as ns\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 1.71840500831604 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "p = mlb.player(547989)\n",
+    "print(f\"--- {time.time() - start} seconds ---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['23', '30', '44', '27', '49']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.jersey.all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "https://statsapi.mlb.com/api/v1/people?personIds=608337&hydrate=stats(type=[career,careerAdvanced,yearByYear,yearByYearAdvanced,pitchArsenal],group=[hitting,fielding,pitching],gameType=[R,P],sitCodes=[h,a]),rosterEntries,education,xrefId,draft,awards,transactions\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = mlb.Player(608337)\n",
+    "with requests.session() as sesh:\n",
+    "    sesh.get(\"https://www.baseball-reference.com/redirect.fcgi?player=1&mlb_ID=547989\")\n",
+    "    sesh.get(\"https://www.baseball-reference.com/bullpen/Jos%C3%A9_Abreu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'education'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zr/zg5glfgx0nnglw9432y0hl5w0000gn/T/ipykernel_8701/2297552342.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"education\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'education'"
+     ]
+    }
+   ],
    "source": []
   },
   {
