updated objects and classes

--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -22,18 +22,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "person_data = requests.get(\"https://statsapi.mlb.com/api/v1/people/547989\").json()['people'][0]\n",
-    "abreu = mlb.person(person_data)"
+    "f = mlb.franchise(145)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tm = mlb.team(145,2021)"
+    "t = mlb.team(145,2021)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mlb.classes._league_data"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -41,19 +58,397 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'mlbam': 145, 'full_name': 'Chicago White Sox', 'location_name': 'Chicago', 'franchise_name': 'Chicago', 'team_name': 'White Sox', 'club_name': 'White Sox', 'short_name': 'Chi White Sox', 'venue_mlbam': 4, 'venue_name': 'Guaranteed Rate Field', 'first_year': '1901', 'league_mlbam': 103, 'league_name': 'American League', 'league_short': 'American', 'league_abbrv': 'AL', 'div_mlbam': 202, 'div_name': 'American League Central', 'div_short': 'AL Central', 'div_abbrv': 'ALC', 'season': 2021}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>date</th>\n",
+       "      <th>number</th>\n",
+       "      <th>mlbam</th>\n",
+       "      <th>name</th>\n",
+       "      <th>pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017-06-24</td>\n",
+       "      <td>56</td>\n",
+       "      <td>279824</td>\n",
+       "      <td>Mark Buehrle</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2015-05-23</td>\n",
+       "      <td>14</td>\n",
+       "      <td>117244</td>\n",
+       "      <td>Paul Konerko</td>\n",
+       "      <td>1B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-08-29</td>\n",
+       "      <td>35</td>\n",
+       "      <td>123245</td>\n",
+       "      <td>Frank Thomas</td>\n",
+       "      <td>1B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>1997-09-14</td>\n",
+       "      <td>72</td>\n",
+       "      <td>114182</td>\n",
+       "      <td>Carlton Fisk</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>1997-04-15</td>\n",
+       "      <td>42</td>\n",
+       "      <td>121314</td>\n",
+       "      <td>Jackie Robinson</td>\n",
+       "      <td>2B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1989</td>\n",
+       "      <td>1989-08-20</td>\n",
+       "      <td>3</td>\n",
+       "      <td>110456</td>\n",
+       "      <td>Harold Baines</td>\n",
+       "      <td>OF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>1987-01-01</td>\n",
+       "      <td>19</td>\n",
+       "      <td>120562</td>\n",
+       "      <td>Billy Pierce</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>1987-01-01</td>\n",
+       "      <td>16</td>\n",
+       "      <td>118055</td>\n",
+       "      <td>Ted Lyons</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1984</td>\n",
+       "      <td>1984-08-14</td>\n",
+       "      <td>11</td>\n",
+       "      <td>110290</td>\n",
+       "      <td>Luis Aparicio</td>\n",
+       "      <td>SS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1983</td>\n",
+       "      <td>1983-01-01</td>\n",
+       "      <td>9</td>\n",
+       "      <td>119176</td>\n",
+       "      <td>Minnie Minoso</td>\n",
+       "      <td>OF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>1976-01-01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>114361</td>\n",
+       "      <td>Nellie Fox</td>\n",
+       "      <td>2B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1975</td>\n",
+       "      <td>1975-01-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>110297</td>\n",
+       "      <td>Luke Appling</td>\n",
+       "      <td>SS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   season        date number   mlbam             name pos\n",
+       "0    2017  2017-06-24     56  279824     Mark Buehrle   P\n",
+       "1    2015  2015-05-23     14  117244     Paul Konerko  1B\n",
+       "2    2010  2010-08-29     35  123245     Frank Thomas  1B\n",
+       "3    1997  1997-09-14     72  114182     Carlton Fisk   C\n",
+       "4    1997  1997-04-15     42  121314  Jackie Robinson  2B\n",
+       "5    1989  1989-08-20      3  110456    Harold Baines  OF\n",
+       "6    1987  1987-01-01     19  120562     Billy Pierce   P\n",
+       "7    1987  1987-01-01     16  118055        Ted Lyons   P\n",
+       "8    1984  1984-08-14     11  110290    Luis Aparicio  SS\n",
+       "9    1983  1983-01-01      9  119176    Minnie Minoso  OF\n",
+       "10   1976  1976-01-01      2  114361       Nellie Fox  2B\n",
+       "11   1975  1975-01-01      4  110297     Luke Appling  SS"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_dict = {}\n",
-    "for k,v in tm('team_info').items():\n",
-    "    new_dict[k] = type(v)\n",
-    "print(new_dict)"
+    "f.retired"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_data = requests.get(\"https://statsapi.mlb.com/api/v1/people/547989\").json()['people'][0]\n",
+    "abreu = mlb.person(person_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Guaranteed Rate Field'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.division.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class person:\n",
+    "    def __init__(self,**kwargs):\n",
+    "        self.__dict__.update(kwargs)\n",
+    "        \n",
+    "    def __getitem__(self,_attr):\n",
+    "        return getattr(self,_attr)\n",
+    "    \n",
+    "    def __setattr__(self,_attr,_val):\n",
+    "        pass\n",
+    "    \n",
+    "    def _attr_getter(self):\n",
+    "        return self._name\n",
+    "    \n",
+    "    def _attr_setter(self,_key):\n",
+    "        return self.__dict__[_key]\n",
+    "        \n",
+    "    # def __init_subclass__(cls):\n",
+    "    #     pass\n",
+    "        \n",
+    "\n",
+    "class student(person):\n",
+    "    def __init__(self,**kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    # def __setitem__(self,_attr,_val):\n",
+    "    #     setattr(\n",
+    "    #         self,\n",
+    "    #         _attr,\n",
+    "    #         property(\n",
+    "    #             fget=lambda x : self.__dict__[_attr])\n",
+    "    #         )\n",
+    "\n",
+    "    # def __delattr__(self, _attr: str):\n",
+    "    #     delattr(self,_attr)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = person(name='joe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'joe'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.name = 'joey'\n",
+    "p['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'dict' has no attribute '__get__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zr/zg5glfgx0nnglw9432y0hl5w0000gn/T/ipykernel_8018/558455806.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__get__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'dict' has no attribute '__get__'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = student(name='joe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.weight = 140"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.student"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -62,7 +457,8 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "tm = mlb.team_data(145,2021,_logtime=False)"
+    "tm = mlb.team_data(145,2021,_logtime=False)\n",
+    "pd.DataFrame().iloc"
    ]
   },
   {
@@ -80,27 +476,66 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "joe\n"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self,name:str):\n",
+    "        self.__name = name\n",
+    "        \n",
+    "\n",
+    "    @property    \n",
+    "    def name(self):\n",
+    "        return self.__name\n",
+    "\n",
+    "p = person('joe')\n",
+    "print(p.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "can't set attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zr/zg5glfgx0nnglw9432y0hl5w0000gn/T/ipykernel_4593/442306457.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'joey'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "p.name = 'joey'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "namespace(name='Chicago White Sox', mlbam=145)"
+       "'joe'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abreu.team"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = tm[-7]"
+    "p.name"
    ]
   },
   {
